* growable-forms: on_add_mod_url handler function could cancel the add action if return empty value

Version 2.3.0
==============

* make it compatible with php 8
* cleanup of old obsoleted stuff
* When logging a request, log also request method
* Make sure that `num_rows`, `act_row` and `showed_rows` properties of data layer are integers
* New functions from_unixtime and unix_timestamp added to DataLayer

Version 2.2.4
==============

* js function HTMLSpecialChars() do not crash when the argument is not string
* Fix Session:id() function
* Improve loading of phplib - load only what is needed
* Some old obsoleted stuff removed from page_controller()
* unsafe_inline script removal
* OOH form can register event handlers using addEventListener instead of inline `onXXX` property
* growable_forms do not use inline javascript in `href` attribute
* removed unsafe `eval()` stuff

Version 2.2.3
==============

* Log when executed from CLI
* Possibility to render optgroups of select clickable (use <option> tag for them)
* Possibility to render options outside optgroup when optgroups are used
* check_netmask() and check_network_address() functions support hex format of netmask
* when removing a row of growable forms, remove also hidden form field containing ordering number
* Enhanced configuration for logger
* Fix sql formating of float strings
* RecursiveMkdir() function report $dirname on error
* Fix 'content-type' header returned by get_js.php script
* Adding config option for globaly set cookie parameters
* Allow to globaly configure initial values of OohForm class options
* Ability to set `generate_ids_by_names` per element of OohForm

Version 2.2.2
==============

* Set language of the page in <html> tag

Version 2.2.1
==============

* Log new requests a bit later. Logging function might require access e.g. session

Version 2.2.0
==============

* Fix XSS vulnerability in get_js and get_css files
* Adding add_extrahtml() method to Ooh form elements