@@ -1,4 +1,5 @@
 * growable-forms: on_add_mod_url handler function could cancel the add action if return empty value
+* growable-forms: add_link does not have to be enclosed in div or span
 
 Version 2.3.0
 ==============
